# Dirac

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/core/: lib.rs  mod.rs  plugin.rs
src/services/: ai.rs  command.rs  mod.rs
src/ui/: terminal.rs
